--- a/docs/1.getting-started/1.index.md
+++ b/docs/1.getting-started/1.index.md
@@ -16,7 +16,7 @@ Modern JavaScript applications often require complex architectures that enable t
 - Supports both ESM and CommonJS
 - Ensures excellent developer experience (DX)
 
-These needs were the direct inspiration for creating Vercube—a modern, efficient, and flexible framework that solves the problems of existing solutions while offering new possibilities.
+These needs were the direct inspiration for creating Vercube-a modern, efficient, and flexible framework that solves the problems of existing solutions while offering new possibilities.
 
 ## What is Vercube?
 
@@ -24,14 +24,14 @@ Vercube is a modern JavaScript framework based on the object-oriented programmin
 
 Key features of Vercube:
 
-- **Declarative routing** — thanks to TypeScript decorators, you can declare API endpoints in a readable and concise way
-- **Dependency Injection** — built-in dependency injection system that facilitates code organization and testing
-- **Runtime agnostic** — works independently across all runtime environments (Node.js, Bun, Deno) using native interfaces
-- **Modularity** — flexible architecture that allows for creating modular applications
-- **Zero-config** — default configurations that allow for quick start without unnecessary setup
-- **Type safety** — full support for TypeScript that ensures type safety at all levels of the application
-- **Support for ESM and CommonJS** — compatibility with both module systems
-- **High performance** — optimized architecture using direct Request/Response handling for exceptional speed and minimal resource usage
+- **Declarative routing** - thanks to TypeScript decorators, you can declare API endpoints in a readable and concise way
+- **Dependency Injection** - built-in dependency injection system that facilitates code organization and testing
+- **Runtime agnostic** - works independently across all runtime environments (Node.js, Bun, Deno) using native interfaces
+- **Modularity** - flexible architecture that allows for creating modular applications
+- **Zero-config** - default configurations that allow for quick start without unnecessary setup
+- **Type safety** - full support for TypeScript that ensures type safety at all levels of the application
+- **Support for ESM and CommonJS** - compatibility with both module systems
+- **High performance** - optimized architecture using direct Request/Response handling for exceptional speed and minimal resource usage
 
 Vercube can be seen as a modern evolution of the concepts introduced by routing-controllers, but with better implementation, support for the latest standards, and much greater flexibility.
 
