chore: add benchmark info and fix readme

--- a/docs/1.getting-started/1.index.md
+++ b/docs/1.getting-started/1.index.md
@@ -41,7 +41,11 @@ In the JavaScript ecosystem, there are many frameworks such as [Express](https:/
 
 ### Performance without compromise
 
-Vercube has been designed with performance as the absolute priority from the very beginning. Built on native Request and Response interfaces with zero middleware overhead, it delivers unmatched speed and minimal latency across all runtime environments. Unlike other feature-rich frameworks (like NestJS), Vercube maintains a minimalist internal architecture that doesn't burden applications with unnecessary overhead. At the same time, it offers advanced features that typically require additional libraries in lighter frameworks (like Express).
+Vercube has been designed with performance as the absolute priority from the very beginning. Built on native Request and Response interfaces with zero middleware overhead, it delivers unmatched speed and minimal latency across all runtime environments. Unlike other feature-rich frameworks (like NestJS), Vercube maintains a minimalist internal architecture that doesn't burden applications with unnecessary overhead - resulting in build times over 2× faster than NestJS. At the same time, it offers advanced features that typically require additional libraries in lighter frameworks (like Express).
+
+::callout{icon="i-heroicons-bolt" color="primary"}
+Independent [benchmarks](https://github.com/vercube/benchmarks) comparing Vercube against NestJS and routing-controllers show that Vercube consistently leads in build time, cold start time, requests per second, and latency. Check out the latest results at [github.com/vercube/benchmarks](https://github.com/vercube/benchmarks).
+::
 
 ### Superior developer experience
 
