--- a/docs/1.getting-started/3.examples.md
+++ b/docs/1.getting-started/3.examples.md
@@ -11,3 +11,27 @@ Below you'll find a collection of example applications that demonstrate various 
 | `aws-lambda`      | [examples/aws-lambda](https://github.com/vercube/vercube/tree/main/examples/aws-lambda/)           | `npx giget gh:vercube/vercube/examples/aws-lambda vercube-aws`        |
 | `azure-functions` | [examples/azure-functions](https://github.com/vercube/vercube/tree/main/examples/azure-functions/) | `npx giget gh:vercube/vercube/examples/azure-functions vercube-azure` |
 | `websockets`      | [examples/websockets](https://github.com/vercube/vercube/tree/main/examples/websockets/)           | `npx giget gh:vercube/vercube/examples/websockets vercube-wss`        |
+
+## Playground patterns
+
+The `playground/` app includes reference implementations for common patterns. One example is a typed request-context wrapper that provides compile-time safety for `RequestContext` keys and values. See:
+
+- `playground/src/Services/TypedRequestContext.ts`
+- `playground/src/Services/RequestContextKeys.ts`
+
+Usage looks like this:
+
+```ts
+import { TypedRequestContext } from '../Services/TypedRequestContext';
+import { RequestIdKey } from '../Services/RequestContextKeys';
+
+const ctx = new TypedRequestContext(this.gRequestContext);
+ctx.set(RequestIdKey, crypto.randomUUID());
+
+const requestId = ctx.get(RequestIdKey);
+```
+
+**Rationale**
+- Avoids string-typo bugs by centralizing keys.
+- Enforces value types at compile time (e.g., `requestStartTime` is always a `number`).
+- Enables incremental adoption: typed access can live alongside existing string-based calls.
