refactor(playground): resolve TypedRequestContext via IoC and add coverage

--- a/docs/1.getting-started/3.examples.md
+++ b/docs/1.getting-started/3.examples.md
@@ -22,10 +22,14 @@ The `playground/` app includes reference implementations for common patterns. On
 Usage looks like this:
 
 ```ts
+import { Container, Inject } from '@vercube/di';
 import { TypedRequestContext } from '../Services/TypedRequestContext';
 import { RequestIdKey } from '../Services/RequestContextKeys';
 
-const ctx = new TypedRequestContext(this.gRequestContext);
+@Inject(Container)
+private gContainer!: Container;
+
+const ctx = this.gContainer.resolve(TypedRequestContext);
 ctx.set(RequestIdKey, crypto.randomUUID());
 
 const requestId = ctx.get(RequestIdKey);
